syntax = "proto3";
package rollkit;

// SequencerInput ...
service SequencerInput {
    // SubmitRollupTransaction ...
    rpc SubmitRollupTransaction(SubmitRollupTransactionRequest) returns (SubmitRollupTransactionResponse) {}
}

// SubmitRollupTransactionRequest ...
message SubmitRollupTransactionRequest {
    // the unhashed rollup id
	bytes rollup_id = 1;
	// the raw data bytes of the rollup transaction
	bytes data = 2;
}

// SubmitRollupTransactionResponse ...
message SubmitRollupTransactionResponse {
}

// SequencerOutput ...
service SequencerOutput {
    // SubmitRollupTransaction ...
    rpc GetNextBatch(Batch) returns (Batch) {}
}

// Batch holds a list of transactions
message Batch {
    repeated bytes transactions = 1;
}

// BatchVerifier
service BatchVerifier {
    // VerifyBatch ...
    rpc VerifyBatch(Batch) returns (VerificationResponse) {}
}

// VerificationResponse
message VerificationResponse {
    bool success = 1;
}
